feat: vacation oas + handler
