# openapi.yaml
@@ -513,7 +513,178 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         
         "403":
-          $ref: '#/components/responses/Forbidden'  
+          $ref: '#/components/responses/Forbidden' 
+
+
+  /vacation:
+    post:
+      tags:
+        - vacation
+      summary: Create vacation 
+      operationId: createVacation
+
+      requestBody:
+        description: New vacation data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VacationCreate'
+
+      responses:
+        "201":
+          description: Vacation created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Vacation'
+
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        
+        "401":
+          $ref: '#/components/responses/Unauthorized'
+        
+        "409":
+          $ref: "#/components/responses/Conflict"
+        
+        "403":
+          $ref: '#/components/responses/Forbidden'
+    
+    get:
+      tags:
+        - vacation
+      summary: Get all vacations
+      operationId: getVacations
+      
+      parameters:
+        - name: filter
+          description: Vacations filter
+          in: query
+          required: false
+          explode: true 
+          schema:
+            $ref: '#/components/schemas/VacationFilter'
+
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/VacationList'
+
+        "401":
+          $ref: '#/components/responses/Unauthorized'
+
+        "403":
+          $ref: '#/components/responses/Forbidden'
+
+
+  /vacation/{vacationID}:
+    get:
+      tags:
+        - vacation
+      summary: Get vacation
+      operationId: getVacation
+
+      parameters:
+        - name: vacationID
+          in: path
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+      
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Vacation'
+
+        "404":
+          $ref: '#/components/responses/NotFound'
+        
+        "401":
+          $ref: '#/components/responses/Unauthorized'
+
+        "403":
+          $ref: '#/components/responses/Forbidden'
+
+
+    patch:
+      tags:
+        - vacation
+      summary: Patch vacation
+      operationId: patchVacation
+
+      parameters:
+        - name: vacationID
+          in: path
+          required: true
+          schema:
+            type: integer
+            minimum: 1      
+      
+      requestBody:
+        description: Vacation fields to patch
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VacationPatch'
+      
+      responses:
+        "200":
+          description: Vacation updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Vacation'
+
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        
+        "401":
+          $ref: '#/components/responses/Unauthorized'
+        
+        "403":
+          $ref: '#/components/responses/Forbidden'
+        
+        "404":
+          $ref: '#/components/responses/NotFound'
+        
+        "409":
+          $ref: "#/components/responses/Conflict"
+
+    delete:
+      tags:
+        - vacation
+      summary: Delete vacation
+      operationId: deleteVacation
+
+      parameters:
+        - name: vacationID
+          in: path
+          required: true
+          schema:
+            type: integer
+            minimum: 1 
+      
+      responses:
+        "204":
+          description: Vacation deleted
+
+        "404":
+          $ref: '#/components/responses/NotFound'
+
+        "401":
+          $ref: '#/components/responses/Unauthorized'
+        
+        "403":
+          $ref: '#/components/responses/Forbidden'   
 
 components:
   responses:
@@ -866,3 +1037,107 @@ components:
         employee_id:
           type: integer
           nullable: true
+    
+    VacationBase:
+      type: object
+      properties:
+        start_date:
+          type: string
+          format: date
+        end_date:
+          type: string
+          format: date
+        comment:
+          type: string
+          nullable: true
+    
+    VacationCreate:
+      type: object
+      required:
+        - employee_id
+        - start_date
+        - end_date
+      allOf:
+        - $ref: '#/components/schemas/VacationBase'
+        - properties:
+            employee_id:
+              type: integer
+
+    VacationPatch:
+      type: object
+      properties:
+        start_date:
+          type: string
+          format: date
+          nullable: true
+        end_date:
+          type: string
+          format: date
+          nullable: true
+        comment:
+          type: string
+          nullable: true
+        status:
+          type: string
+          example: "pending/approved/rejected"
+    
+    Vacation:
+      allOf:
+        - type: object
+          required:
+            - id
+            - status
+          properties:
+            id:
+              type: integer
+            created_at:
+                type: string
+                format: date-time
+                example: '2024-03-20T09:12:28Z'
+            updated_at:
+                type: string
+                format: date-time
+                example: '2024-03-20T09:12:28Z'
+            status:
+              type: string
+              example: "pending/approved/rejected"
+            employee:
+              $ref: '#/components/schemas/EmployeeShort'
+
+        - $ref: '#/components/schemas/VacationBase'
+    
+    VacationList:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/Vacation'
+        total:
+          type: integer
+          example: 100
+    
+    VacationFilter:
+      type: object
+      properties:
+        date_from:
+          type: string
+          format: date
+          nullable: true
+        date_to:
+          type: string
+          format: date
+          nullable: true
+        status:
+          type: string
+          nullable: true
+        employee_id:
+          type: integer
+          nullable: true
+        limit:
+          type: integer
+          nullable: true
+        offset:
+          type: integer
+          nullable: true
+    
